lythrum/apps/media/filebrowser.httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: filebrowser
  namespace: media
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - fb.staging.estrogen.lol
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: filebrowser
      namespace: media
      port: 80
