lythrum/apps/media/filebrowser.ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: filebrowser-http
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`fb.${DOMAIN_INTERNAL}`)
      middlewares:
        - name: redirect-https
          namespace: traefik
      services:
        - name: noop@internal
          kind: TraefikService
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: filebrowser-https
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`fb.${DOMAIN_INTERNAL}`)
      priority: 10
      middlewares:
        - name: authentik
          namespace: traefik
      services:
        - name: filebrowser
          port: 80
    - kind: Rule
      match: "Host(`fb.${DOMAIN_INTERNAL}`) && PathPrefix(`/outpost.goauthentik.io/`)"
      priority: 15
      services:
        - namespace: authentik
          name: ak-outpost-authentik-embedded-outpost
          port: 9000
  tls:
    secretName: filebrowser-tls
